--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.20.0",
     "babel-plugin-import": "^1.13.0",
     "babel-plugin-module-resolver": "^4.0.0",
+    "lyric-parser": "^1.0.1",
     "moment": "^2.27.0",
     "react": "16.13.1",
     "react-native": "0.63.2",
