--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "axios": "^0.20.0",
     "babel-plugin-import": "^1.13.0",
     "babel-plugin-module-resolver": "^4.0.0",
+    "buffer": "^5.6.0",
+    "events": "^3.2.0",
     "lyric-parser": "^1.0.1",
     "moment": "^2.27.0",
     "react": "16.13.1",
@@ -41,7 +43,10 @@
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "stream": "^0.0.2",
+    "timers": "^0.1.1",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@babel/core": "^7.11.5",
