--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-sound": "^0.11.0",
     "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^2.15.1",
+    "react-native-video": "^5.1.0-alpha8",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
